--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ END:VCALENDAR`;
             class="inline-block mt-3 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
             >Add to Calendar (Outlook/Google)</a>
           <p class="italic text-yellow-600 mt-4">
-            Here we go again… not being paid enough for this huh? 😂
+            Thanks for booking! If this made you smile, my job here is done. Have a wonderful day and keep being awesome! 😄
           </p>
           <!-- Add to Calendar Buttons -->
           <div class="flex justify-center space-x-4 mt-4">
