--- a/index.html
+++ b/index.html
@@ -56,15 +56,22 @@
     }
   </style>
 </head>
-<body class="bg-gray-50 min-h-screen">
-  <div class="container mx-auto px-4 py-6 max-w-6xl">
+<body class="bg-blue-900 min-h-screen">
+  <div class="container mx-auto px-4 py-6 max-w-6xl relative">
+    <!-- Teacher Portal Button Top Left -->
+    <div class="absolute top-6 left-6 z-20">
+      <a href="teacher-portal.html" class="inline-flex items-center px-5 py-2.5 bg-white text-blue-800 font-semibold rounded-full shadow-lg border-2 border-blue-800 transition-colors duration-200 hover:text-maroon focus:outline-none focus:ring-2 focus:ring-blue-200">
+        <i class="fas fa-chalkboard-teacher mr-2"></i>
+        Teacher Portal
+      </a>
+    </div>
     <!-- Header -->
     <header class="mb-6 relative">
       <div class="text-center">
-        <h1 class="text-3xl md:text-4xl font-bold text-blue-800">
+        <h1 class="text-3xl md:text-4xl font-bold text-yellow-200 drop-shadow">
           Discovery Room Booking
         </h1>
-        <p class="text-gray-600">EdTech Teacher Mr. Albert BINUS School Simprug</p>
+        <p class="text-yellow-100">EdTech Teacher Mr. Albert BINUS School Simprug</p>
       </div>
       <img
         src="./images/simprug.png"
@@ -72,18 +79,6 @@
         class="absolute top-0 right-0 h-16 w-auto"
       />
     </header>
-
-
-    <!-- Teacher Portal Access Button -->
-    <div class="flex justify-center mb-6">
-      <div class="w-16 h-1 bg-blue-500 rounded-full"></div>
-    </div>
-    <div class="flex justify-center mb-8">
-      <a href="teacher-portal.html" class="inline-flex items-center px-6 py-3 bg-yellow-brand text-maroon font-semibold rounded-lg shadow hover:bg-yellow-400 transition text-lg border border-maroon">
-        <i class="fas fa-chalkboard-teacher mr-2"></i>
-        Teacher Portal
-      </a>
-    </div>
 
     <!-- Banner -->
     <section class="mb-8">
@@ -151,7 +146,7 @@
 
     <!-- Gallery -->
     <section class="mb-10">
-      <h2 class="text-2xl font-semibold text-center text-blue-800 mb-6">
+      <h2 class="text-2xl font-semibold text-center text-yellow-200 mb-6">
         Life in Our EdTech Class
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
