--- a/teacher-portal.html
+++ b/teacher-portal.html
@@ -118,6 +118,70 @@
             </button>
           </div>
           <div id="requestStatus" class="text-sm text-center mt-1"></div>
+          <div class="text-center mt-4">
+            <a href="#" id="signUpLink" class="text-blue-700 hover:underline text-sm">Don't have an account? Sign Up</a>
+          </div>
+  <!-- Sign Up Modal -->
+  <div id="signUpModal" class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-50 z-50">
+    <div class="bg-white p-6 rounded-lg shadow-lg max-w-sm w-full fade-in">
+      <h2 class="text-xl font-bold text-blue-800 mb-2">Teacher Sign Up</h2>
+      <form id="signUpForm" class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Full Name</label>
+          <input type="text" id="signUpName" required class="w-full px-3 py-2 border rounded-md focus:ring-2 focus:ring-blue-500" />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+          <input type="email" id="signUpEmail" required class="w-full px-3 py-2 border rounded-md focus:ring-2 focus:ring-blue-500" />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Subject/Role</label>
+          <input type="text" id="signUpSubject" required class="w-full px-3 py-2 border rounded-md focus:ring-2 focus:ring-blue-500" />
+        </div>
+        <div class="flex flex-col sm:flex-row sm:justify-end gap-3 mt-4">
+          <button type="button" id="cancelSignUpBtn" class="flex-1 sm:flex-none px-4 py-2 border border-gray-300 rounded-md hover:bg-gray-100 transition">Cancel</button>
+          <button type="submit" class="flex-1 sm:flex-none px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition">Submit</button>
+        </div>
+      </form>
+      <div id="signUpStatus" class="text-sm text-center mt-2"></div>
+    </div>
+  </div>
+    // Show Sign Up Modal
+    document.getElementById('signUpLink').onclick = function(e) {
+      e.preventDefault();
+      document.getElementById('signUpModal').classList.remove('hidden');
+      document.getElementById('signUpModal').classList.add('flex');
+    };
+    // Hide Sign Up Modal
+    document.getElementById('cancelSignUpBtn').onclick = function() {
+      document.getElementById('signUpModal').classList.remove('flex');
+      document.getElementById('signUpModal').classList.add('hidden');
+    };
+    // Handle Sign Up Form Submission
+    document.getElementById('signUpForm').onsubmit = async function(e) {
+      e.preventDefault();
+      const name = document.getElementById('signUpName').value.trim();
+      const email = document.getElementById('signUpEmail').value.trim().toLowerCase();
+      const subject = document.getElementById('signUpSubject').value.trim();
+      const statusDiv = document.getElementById('signUpStatus');
+      if(!name || !email || !subject) {
+        statusDiv.textContent = 'All fields are required.';
+        statusDiv.className = 'text-red-600';
+        return;
+      }
+      try {
+        // Save to Firestore (teachers collection)
+        await firebase.firestore().collection('teachers').add({
+          name, email, subject, createdAt: new Date().toISOString(), status: 'pending'
+        });
+        statusDiv.textContent = 'Sign-up request submitted! You will be notified once approved.';
+        statusDiv.className = 'text-green-600';
+        document.getElementById('signUpForm').reset();
+      } catch (err) {
+        statusDiv.textContent = 'Failed to submit sign-up. Please try again.';
+        statusDiv.className = 'text-red-600';
+      }
+    };
         </div>
       </div>
     </div>
