--- a/teacher-portal.html
+++ b/teacher-portal.html
@@ -93,7 +93,7 @@
       <div class="w-16 h-16 mb-4 bg-blue-800 rounded-full flex items-center justify-center shadow-md">
         <i class="fas fa-chalkboard-teacher text-yellow-200 text-2xl"></i>
       </div>
-      <h1 class="text-3xl font-bold text-yellow-200 mb-1">Discovery Room Booking</h1>
+      <h1 class="text-3xl font-bold mb-1" style="color: #1e3a8a;">Discovery Room Booking</h1>
       <p class="text-yellow-100">Teacher Portal - Manage your bookings</p>
     </header>
 
