--- a/index.html
+++ b/index.html
@@ -149,6 +149,41 @@
         class="w-full h-72 object-cover rounded-xl shadow-xl border-4 border-yellow-200"
       />
     </section>
+  <!-- Device Borrowing Coming Soon -->
+  <style>
+    @keyframes bounceIn {
+      0% { opacity: 0; transform: scale(0.7) translateY(60px); }
+      60% { opacity: 1; transform: scale(1.05) translateY(-10px); }
+      80% { transform: scale(0.98) translateY(4px); }
+      100% { opacity: 1; transform: scale(1) translateY(0); }
+    }
+    @keyframes device-borrow-zoom {
+      0%, 100% { transform: scale(1); }
+      20% { transform: scale(1.06); }
+      40% { transform: scale(1.12); }
+      60% { transform: scale(1.06); }
+      80% { transform: scale(1); }
+    }
+    .device-borrow-animate {
+      animation: bounceIn 1.1s cubic-bezier(.4,2,.6,1) 0.2s both, device-borrow-zoom 2.8s cubic-bezier(.4,2,.6,1) 1.5s infinite;
+    }
+    @keyframes pulse {
+      0%, 100% { color: #FFD600; text-shadow: 0 0 0 #FFD600; }
+      50% { color: #FFB300; text-shadow: 0 0 12px #FFD600, 0 0 2px #fff; }
+    }
+    .device-borrow-pulse { animation: pulse 1.2s infinite; }
+  </style>
+  <section class="mb-12">
+    <div class="bg-white border-4 border-yellow-400 rounded-2xl shadow-2xl p-8 flex flex-col items-center justify-center relative device-borrow-animate" style="overflow:hidden;">
+      <div style="position:absolute;top:0;left:0;width:100%;height:16px;background:linear-gradient(90deg,#FFD600 60%,#FFF7AE 100%);border-radius:16px 16px 0 0;"></div>
+      <h2 class="text-2xl md:text-3xl font-bold text-yellow-700 mb-2 flex items-center mt-2">
+        <i class="fas fa-laptop mr-3 device-borrow-pulse"></i>
+        Device Borrowing <span class="ml-2 text-yellow-600">Coming Soon!</span>
+      </h2>
+      <p class="text-gray-800 text-lg text-center max-w-2xl mb-2">Soon, you’ll be able to borrow <span class="font-semibold text-yellow-700">Chromebooks, iPads, VR headsets, robots</span>, and more directly from this platform.</p>
+      <div class="mt-2 px-4 py-2 bg-yellow-100 border border-yellow-300 rounded-lg text-yellow-900 font-medium shadow-sm">Stay tuned for updates!</div>
+    </div>
+  </section>
 
     <!-- Booking Calendar -->
     <section class="bg-white rounded-xl shadow-xl p-8 border border-gray-200 mb-12">
@@ -573,7 +608,7 @@
   Tuesday:   ["7:30-7:50","9:10-9:30","11:30-12:10"],
   Wednesday: ["7:30-7:50","10:50-12:10"],
   Thursday:  ["7:30-7:50","9:10-9:30","11:30-12:10"],
-  Friday:    ["7:30-7:50","10:50-11:30","13:30-14:10","13:00-15:30"]
+  Friday:    ["7:30-7:50","10:50-11:30","13:30-14:10","14:10-15:30","13:30-14:10","14:10-15:30"]
     };
 
     // DOM refs
