--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
   Tuesday:   ["7:30-7:50","9:10-9:30","11:30-12:10"],
   Wednesday: ["7:30-7:50","10:50-12:10"],
   Thursday:  ["7:30-7:50","9:10-9:30","11:30-12:10"],
-  Friday:    ["7:30-7:50","10:50-11:30","13:30-14:10","14:10-15:30","13:30-14:10","14:10-15:30"]
+  Friday:    ["7:30-7:50","13:30-14:10","14:10-15:30","13:30-14:10","14:10-15:30"]
     };
 
     // DOM refs
