--- a/index.html
+++ b/index.html
@@ -604,11 +604,11 @@
 
     // Hard-coded slots by weekday
     const timeSlots = {
-  Monday:    ["7:30-7:50","9:10-9:30","11:30-12:10","14:10-15:30"],
-  Tuesday:   ["7:30-7:50","9:10-9:30","11:30-12:10"],
-  Wednesday: ["7:30-7:50","10:50-12:10"],
-  Thursday:  ["7:30-7:50","9:10-9:30","11:30-12:10"],
-  Friday:    ["7:30-7:50","13:30-14:10","14:10-15:30","13:30-14:10","14:10-15:30"]
+  Monday:    ["7:30-7:50","7:50-8:30","12:10-12:50","12:50-13:10"],
+  Tuesday:   ["7:30-7:50","7:50-8:30","8:30-9:10","9:10-9:30","10:50-11:30","12:10-12:50"],
+  Wednesday: ["7:30-7:50","7:50-8:30","8:30-9:10","9:30-10:10","10:50-12:10","13:30-15:30"],
+  Thursday:  ["7:30-7:50","7:50-8:30","10:10-10:50"],
+  Friday:    ["7:30-7:50","7:50-8:30","8:30-9:10","9:30-10:10","10:10-11:30","13:30-14:10","14:10-15:30","13:30-14:10","14:10-15:30"]
     };
 
     // DOM refs
